Revert "Merge branch 'branch_dev' into branch_token"
This reverts commit c32f5070fddc280e4dc8544cbf608afbd3484d9f, reversing
changes made to f508ced72048d8d751bcf7c7adbba1b4c721811d.