@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -43,10 +44,9 @@ public class EntityErrorDTO {
 	}
 
 	public static <T> EntityErrorDTO createFromValidation(Set<ConstraintViolation<T>> violations) {
-		
 		List<EntityFieldErroDTO> errors = violations.stream().map(
 				violation -> new EntityFieldErroDTO(violation.getPropertyPath().toString(), violation.getMessage()))
-				.toList();
+				.collect(Collectors.toList());
 
 		String message;
 		if (errors.isEmpty()) {
